feat: add Swagger docs for 2FA verify, register and GET invoice/:id
